Fix bug with blank space on the right side of the app page on small mobile devices due to footer overflow

--- a/client/src/components/Footer/CopyrightAndContactsPanel/CopyrightAndContactsPanel.module.sass
+++ b/client/src/components/Footer/CopyrightAndContactsPanel/CopyrightAndContactsPanel.module.sass
@@ -9,6 +9,8 @@
     max-width: 1170px
     padding: 40px 0 25px
     margin: 0 auto
+    @media screen and (max-width: 500px)
+      padding: 15px 0 10px
     .logoCopyrightContainer
       display: flex
       align-items: center
@@ -21,6 +23,8 @@
         font-size: 14px
       img
         padding-right: 30px
+        @media screen and (max-width: 400px)
+          display: none
     .iconsContainer
       @extend %list-prevent-default
       display: flex
